--- a/package.json
+++ b/package.json
@@ -10,14 +10,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
     "bower": "^1.7.9",
+    "connect-mongo": "^1.3.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.14.0",
+    "express-session": "^1.14.2",
+    "grunt-cli": "^1.2.0",
     "jade": "^1.11.0",
     "moment": "^2.15.1",
     "mongoose": "^4.6.3",
     "path": "^0.12.7",
     "serve-static": "^1.11.1",
     "underscore": "^1.8.3"
+  },
+  "devDependencies": {
+    "grunt": "^1.0.1",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-nodemon": "^0.4.2"
   }
 }
